# takeHome-AQ

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
output/: dataset_20260108_080322.jsonl  dataset_20260108_101753.jsonl  dataset_20260108_114938.jsonl  dataset_20260108_125945.jsonl  dataset_20260108_144413.jsonl  dataset_20260108_172758.jsonl  dataset_20260108_172942.jsonl
src/: __init__.py  config.py  main.py
src/api/: __init__.py  client.py
src/generation/: __init__.py  generator.py  topics.py
src/models/: __init__.py  schemas.py
src/orchestration/: __init__.py  pipeline.py
src/prompts/: __init__.py  response_formats.py
src/utils/: __init__.py  json_utils.py
src/validation/: __init__.py  answer_verify.py  completeness_check.py  correctness.py  crosscheck.py  derivation_audit.py  final_answer.py  qwen_check.py  sanity_check.py  schema.py  symbolic_math.py
src/web/: __init__.py  app.py  export.py
src/web/static/: style.css
src/web/templates/: base.html  dashboard.html  output_view.html  qa_detail.html
src/web/templates/partials/: logs.html  logs_header.html  output_browser.html  output_content.html  qa_list.html  status.html  workers.html
tests/: __init__.py  test_generation.py  test_schemas.py  test_validators.py
